--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ axum = { version = "0.8.1" }
 headers = "0.4.0"
 tokio = { version = "1.43.0", features = ["full"] }
 tower = { version = "0.5.2", features = ["util"] }
-tower-http = { version = "0.6.2", features = ["fs", "trace"] }
+tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
 serde = { version = "1.0.217", features = ["derive"] }
